--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,21 +1,25 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "Barret"
+nickname: "Barret"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
-image: "images/author/john.png"
+image: "images/author/barretcircle.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
-  phone: "+0123456789"
-  github: johndoe
-  linkedin: johndoe
-  researchgate: john-doe
+  email: "barretblake@live.com"
+  github: barretb
+  linkedin: barretblake
 
 # some summary about what you do
 summary:
   - I am a Developer
-  - I am a Devops
-  - I love servers
-  - I work on open-source projects
-  - I love to work with some fun projects
+  - I am a Microsoft MVP
+  - I am an Author
+  - I am a Husband
+  - I am a Father
+  - I am a Blogger
+  - I am a Speaker
+  - I am a Model Railroader
+  - I am a Gamer
+  - I am a Mentor
+  - I am a Creator
