--- a/data/en/sections/featured-posts.yaml
+++ b/data/en/sections/featured-posts.yaml
@@ -1,5 +1,5 @@
 section:
-  name: Featured Posts # Title of section (default: "")
+  name: Engage With Me # Title of section (default: "")
   id: featured-posts # url id/slug of section *Required*
   enable: true # Boolean to determine if this section is enabled (default: false)
   weight: 7 # Order to display section in (default: alphabetical followed by weight)
@@ -8,5 +8,6 @@ section:
 
 # posts to feature
 posts:
-  - markdown-sample
-  - shortcodes
+  - student-mentoring
+  - speaking-engagements
+  - my-creative-side
