--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
 # ⚠️ If hosting under a repo path, use full URL (e.g. https://<github_username>.github.io/<repo_name>) or images won’t display correctly
-baseURL: https://hugo-themes.github.io/toha-example-site/
+baseURL: https://barretblake.dev/
 
 languageCode: bn
 title: "John's Blog"
@@ -11,6 +11,8 @@ module:
   mounts:
   - source: static/files
     target: static/files
+  - source: static/images
+    target: static/images
   - source: ./node_modules/flag-icons/flags
     target: static/flags
   - source: ./node_modules/@fontsource/mulish/files
@@ -24,13 +26,8 @@ languages:
   en:
     languageCode: en
     languageName: English
-    title: "John's Blog"
+    title: "Barret Codes"
     weight: 1
-  bn:
-    languageCode: bn
-    languageName: বাংলা
-    title: জনের ব্লগ
-    weight: 2
 # default language for the content
 defaultContentLanguage: en
 
@@ -59,7 +56,7 @@ enableEmoji: true
 # Site parameters
 params:
   # Background image of the landing page
-  background: /images/site/background.jpg
+  background: /images/site/pexels-pixabay-270348.jpg
   # Background image of the landing page for dark theme
   #darkBackground: /images/site/background.jpg
 
@@ -71,7 +68,7 @@ params:
     favicon: /images/site/favicon.png
 
   # GitHub repo of your site
-  gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
+  gitRepo: https://github.com/barretb/barret-codes
   # Default branch of your Git repo
   gitBranch: main
 
@@ -106,7 +103,7 @@ params:
       # Share post on different social media
       shareButtons:
         facebook: true
-        twitter: true
+        # twitter: true
         linkedin: true
         reddit: true
         whatsapp: true
@@ -114,11 +111,11 @@ params:
         # tumblr: true
         # pocket: true
         # diaspora: true
-        # mastodon: true
+        mastodon: true
 
     # Enable & configure "Notes" features
     notes:
-      enable: true
+      enable: false
 
     # Enable comment feature. There, should be only one of them.
     comment:
@@ -181,11 +178,14 @@ params:
           text: Tip Me
           textColor: '#f9fafc'
           backgroundColor: '#248aaa'
-        # buymeacoffee:
-        #   user: <your buymeacoffee.com user>
-        #   text: Support me on Buy me a coffee!
-        #   info: Buy me a coffee!
-        #   color: '#FFDD00'
+        # Google Analytics
+        google:
+          id: G-QYQMWMCXV6
+        buymeacoffee:
+           user: barretblake
+           text: If you like my work, buy me a Diet Pepsi!
+           info: Buy me a Diet Pepsi!
+           color: '#FFDD00'
 
     # specify whether you want to show Table of Contents in reading page
     toc:
